--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "author": "marwen sarraj sarraj.marwens@gmail.com",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "morgan": "^1.9.1"
     },
