--- a/backend/defaultenvirementvariables.env
+++ b/backend/defaultenvirementvariables.env
@@ -1,3 +1,3 @@
 //this file name should be .env
-MONGOUSERNAME="<MONGODB username>";
-MONGOPASSWORD="<MONGODB password>";
+MONGOUSERNAME=<MONGODB username>
+MONGOPASSWORD=<MONGODB password>
